# deutsch-lehrer

./: .gitignore  german_lesson.apkg  pyproject.toml  requirements.txt
app/: __init__.py  ai_module.py  anki_module.py  database.py  main.py  quiz_module.py
app/schema/: lesson.py
deutsch_lehrer.egg-info/: PKG-INFO  SOURCES.txt
