[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deutsch_lehrer"
version = "0.1.0"
description = "Your German Tutor Application"
authors = [{name = "Your Name", email = "youremail@example.com"}]

[tool.setuptools]
packages = ["app"]  # Include your `app` directory
